<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:background="@color/app_bg">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="12dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/total"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="12dp"
            android:text="@string/btc_total"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/montserrat_bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:src="@drawable/ic_faceid" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:padding="12dp"
            android:text="@string/scan_face_to_complete"
            android:textAllCaps="false"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </LinearLayout>
</layout>
