<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:background="@color/purple_500">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_extra_bold"
            android:padding="12dp"
            android:text="@string/how_many_adults"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_semibold"
            android:padding="12dp"
            android:text="@string/_12_years"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/number_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:np_dividerThickness="0dp"
            app:np_dividerColor="@color/white"
            app:np_height="220dp"
            app:np_max="59"
            app:np_min="13"
            app:np_orientation="horizontal"
            app:np_selectedTextColor="@color/white"
            app:np_selectedTextSize="30sp"
            app:np_selectedTypeface="@font/montserrat_extra_bold"
            app:np_textColor="@color/black"
            app:np_textSize="18sp"
            app:np_typeface="@font/montserrat_semibold"
            app:np_value="1"
            app:np_wheelItemCount="7"
            app:np_width="400dp"
            app:np_wrapSelectorWheel="false" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_extra_bold"
                android:padding="12dp"
                android:text="@string/total"
                android:textAllCaps="true"
                android:textColor="@color/app_bg"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_extra_bold"
                android:padding="12dp"
                android:text="@string/btc"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_bg">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_extra_bold"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/pay"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</layout>
