<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.DetailActivity">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imagebg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/image2" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:alpha="0.5"
                    android:src="@color/black" />
            </FrameLayout>


            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:contentInsetStart="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="48dp"
                    android:contentDescription="@string/app_name"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    android:src="@drawable/baseline_arrow_back" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/new_osogbo"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </com.google.android.material.appbar.MaterialToolbar>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_extra_bold"
                    android:text="@string/santorini"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toTopOf="@+id/title2"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:text="@string/santorini_is_a_fantastic_cycladic_island_in_the_southern_aegean_sea_with_astonishing_volcanic_scenery_and_world_famous_sunset_vistas_it_comprises_a_luxury_oriented_destination_that_is_perfect_for_couples_with_rich_viticulture_and_history_to_dive_into"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/btnSchedule"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_vr"
                    android:drawablePadding="6dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="center"
                    android:text="@string/vr_tour"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_gallery"
                    android:drawablePadding="6dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="center"
                    android:text="@string/gallery"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSchedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="25dp"
                android:text="@string/schedule_trip"
                android:textAllCaps="true"
                app:cornerRadius="10dp"
                app:icon="@drawable/baseline_notifications_24"
                app:iconGravity="textStart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
